# Sovereign

./: .gitignore  CMakeLists.txt
Internal/: dllmain.cpp
Internal/features/: aimbot.cpp  config_system.cpp  esp.cpp  features.h  misc.cpp  triggerbot.cpp
Internal/hooks/: hooks.h  present.cpp
Internal/sdk/: config.h  math.h  offsets.h  structs.h
output/: animationsystem_dll.cs  animationsystem_dll.hpp  animationsystem_dll.rs  animationsystem_dll.zig  buttons.cs  buttons.hpp  buttons.rs  buttons.zig  client_dll.cs  client_dll.hpp  client_dll.rs  client_dll.zig  engine2_dll.cs  engine2_dll.hpp  engine2_dll.rs  engine2_dll.zig  host_dll.cs  host_dll.hpp  host_dll.rs  host_dll.zig  info.json  interfaces.cs  interfaces.hpp  interfaces.rs  interfaces.zig  materialsystem2_dll.cs  materialsystem2_dll.hpp  materialsystem2_dll.rs  materialsystem2_dll.zig  networksystem_dll.cs  networksystem_dll.hpp  networksystem_dll.rs  networksystem_dll.zig  offsets.cs  offsets.hpp  offsets.rs  offsets.zig  panorama_dll.cs  panorama_dll.hpp  panorama_dll.rs  (+45 more)
